--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 :root {
-  --primary-color: rgb(17, 86, 102);
+  --primary-color: rgb(129, 203, 245);
   --primary-color-darker: rgb(9, 48, 56);
 }
 
@@ -24,6 +24,12 @@ body {
   background: #fff;
   padding: 20px;
   border-radius: 10px;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.562);
+}
+
+h1 {
+  font-size: 1.5em;
 }
 
 form input, form label, form button {
